--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+	<%= current_user ? link_to("Log Out", destroy_user_session_path, :method => :delete) : '' %>
 <%= yield %>
 
 </body>
