--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,10 @@
 </head>
 <body>
 	<%= current_user ? link_to("Log Out", destroy_user_session_path, :method => :delete) : '' %>
+	<% if current_user  && current_user.profile %>
+	| <%= link_to 'My Profile', profile_path(current_user.profile) %>
+	<% end %>
+	<br><br>
 <%= yield %>
 
 </body>
