--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,8 +10,30 @@
  *
  *= require_self
  *= require_tree .
+ *= require twitter/typeahead.min
  */
 
 .preview {
   display: block;
+}
+
+body {
+	background-image:url('http://www.desktopwallpaperhd.net/wallpapers/17/7/vector-designs-imagepages-wallpaper-enjoying-images-party-175703.jpg') ;
+
+  background-attachment: fixed;
+	background-repeat: no-repeat;
+}
+
+select {
+	width: 100px;
+}
+
+#user_fraternity_id {
+	width: 200px;
+}
+
+.well {
+	margin-top: 50px;
+  background-color: white
+	;
 }
