--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,30 +1,55 @@
-<div class="container">
-	<div class="well">
-<%= form_for @profile do |f| %>
-<%= f.label :fname, "First Name: " %>
-<%= f.text_field :fname %><br><br>
-<%= f.label :lname, "Last Name: " %>
-<%= f.text_field :lname %><br><br>
-<%= f.label :birthday, "Birth Date: "%>
-<%= f.date_select :birthday, {:start_year => 1900 ,:include_blank => true, :default => nil} %><br><br>
-<label>Fraternity:<br>
-<%= collection_select(:user, :fraternity_id, Fraternity.all, :id, :name, {})  %>
-</label><br><br>
-<%= f.label :address %>
-<%= f.text_field :address %><a id="address_errors">(Your address is for mapping purposes, and will not be displayed)</a><br><br>
-<%= f.hidden_field :lat %>
-<%= f.hidden_field :long %>
-<%= f.label :about, "About:" %><br>
-<%= f.text_area :about, {placeholder: "A bit about yourself.", style: "width: 700px; height: 200px; margin-left: 40px;"} %><br><br>
-
-	<%= f.label :avatar, "Avatar: " %><br>
-	<%= f.file_field :avatar %>
-	<br>
-  <br>
-<%= f.submit %>
-<% end %>
+<%= form_for @profile, :html => {:class => "form-horizontal"} do |f| %>
+<div class="control-group">
+	<%= f.label :fname, "First Name: ", :class => "control-label" %>
+	<div class="controls">
+		<%= f.text_field :fname %>
 	</div>
 </div>
+
+<div class="control-group">
+	<%= f.label :lname, "Last Name: ", :class => "control-label" %>
+	<div class="controls">
+	  <%= f.text_field :lname %>
+	</div>
+</div>
+
+<div class="control-group">
+	<%= f.label :birthday, "Birth Date: ", :class => "control-label" %>
+	<div class="controls">
+		<%= f.date_select :birthday, {:start_year => 1900 ,:include_blank => true, :default => nil} %>
+	</div>
+</div>
+
+<div class="control-group">
+	<label class="control-label" for="user_fraternity_id">Fraternity: </label>
+	<div class="controls">
+		<%= collection_select(:user, :fraternity_id, Fraternity.all, :id, :name, {})  %>
+	</div>
+</div>
+
+<div class="control-group">
+	<%= f.label :address, :class => "control-label" %>
+	<div class="controls">
+		<%= f.text_field :address %><a id="address_errors">(Your address will not be displayed)</a>
+		<%= f.hidden_field :lat %>
+		<%= f.hidden_field :long %>
+	</div>
+</div>
+<div class="control-group">
+	<%= f.label :about, "About:", :class => "control-label" %>
+	<div class="controls">
+		<%= f.text_area :about, {placeholder: "A bit about yourself.", style: "width: 75%; height: 250px;"} %>
+	</div>
+</div>
+<div class="control-group">
+	<%= f.label :avatar, "Avatar: ", :class => "control-label" %>
+	<div class="controls">
+		<%= f.file_field :avatar %>
+	</div>
+</div>
+<%= f.submit :class => 'btn-primary btn controls' %>
+<% end %>
+
 <script>
 $(function () {
 	var handleFiles = function(event) {
