--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,9 +10,48 @@
  *
  *= require_self
  *= require_tree .
- *= require twitter/typeahead.min
+ *= require twitter/typeahead
  */
 
+form input .event-search{
+	width: 100px;
+}
+
+form span .tt-hint{
+	width: 94%;
+	border-radius: 15px;
+}
+
+#map_div {
+	width: 100%;
+	height: 100%;
+	min-height: 575px
+}
+
+#event_entry_fee {
+	width: 30px;
+}
+
+form span .tt-is-open {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 100;
+  background-color: black;
+  border-radius: 5px;
+  width: 98%;
+  color: white;
+  margin-top: 2px;
+  margin-left: 2px;
+  /* TODO: need default z-index, should be configurable */
+  opacity: .7;
+  display: none;
+}
+
+form span .tt-is-open p {
+	margin-left: 15px;
+	margin-top: 10px;
+}
 
 .preview {
   display: block;
@@ -23,9 +62,10 @@ body {
 
   background-attachment: fixed;
 	background-repeat: no-repeat;
+	background-size: 100% 100%;
 }
 
-select {
+form select {
 	width: 100px;
 }
 
