--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -10,7 +10,7 @@
 <script>
 $(function(){
   var map = L.map('map_div').setView(<%= [ @location['latitude'], @location['longitude'] ] %>, 11)
-
+  L.Icon.Default.imagePath = 'http://api.tiles.mapbox.com/mapbox.js/v1.0.0beta0.0/images'
   L.tileLayer('http://tile.openstreetmap.org/{z}/{x}/{y}.png', {
   	maxZoom: 15
   }).addTo(map);
