--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -58,7 +58,7 @@ form span .tt-is-open p {
 }
 
 body {
-	background-image:url('http://www.desktopwallpaperhd.net/wallpapers/17/7/vector-designs-imagepages-wallpaper-enjoying-images-party-175703.jpg') ;
+	background-image:url('http://www.wallm.com/images/2012/12/linkworxseo-web-background-paper-black-templates-generic2.jpg') ;
 
   background-attachment: fixed;
 	background-repeat: no-repeat;
@@ -71,15 +71,19 @@ form select {
 
 .content {
 	min-height: 600px;
+  margin: 50px;
+
 }
 
 #user_fraternity_id {
 	width: 200px;
 }
 
-.well {
+.container .well {
+	color: white;
+	text-shadow: 1px 1px black;
 	margin-top: 50px;
-  background-color: white;
-  min-height: 800px;
+  border: 0px;
+  background: transparent;
 }
 
