--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,6 @@
 <h3 style='float: left'>Events: </h3>
 <form class="navbar-search pull-right" action='/events/search'>
-  <input name="address" type="text" class="search-query event-search" placeholder="Find events by location">
+  <input name="address" type="text" class="search-query event-search" placeholder="Find events by location" style="margin-bottom: -30px;">
 </form>
 
 <div id='map_div'>
