--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,9 +32,9 @@
 								</li>
 
 							</ul>
-							<form action="/search" class="navbar-search pull-right">
+							<form action="/search" class="navbar-search pull-right" id="bro-search-form">
 							  <input type="text" name="name" class="search-query" placeholder="Find a bro!" id="typeahead_input" autocomplete="off">
-							  <button type="Submit" style="border-radius: 100%;"><i class="icon-search"></i></button>
+							  <button type="Submit" style="border-radius: 100%; opacity: 0;"><i class="icon-search"></i></button>
 							</form>
 
 
@@ -46,7 +46,9 @@
 		</div>
 		<div class="well span9 offset1">
 			<div class="content" id="content">
-				<%= yield %>
+				<div class="center" id="center">
+					<%= yield %>
+				</div>
 			</div>
 		</div>
 	</div>
