--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,7 +2,7 @@
 <%= image_tag current_user.avatar.url %>
 
 <p style="margin-left: 20px; margin-top: 20px;position:relative; ">
-	<%= @event.attending_users.include(current_user) ? link_to "Cancel Attendence<br>".html_safe, attend_event_path(@event) : link_to "Attend<br>".html_safe, attend_event_path(@event) %>
+	<%= @event.attending_users.include?(current_user) ? link_to "Cancel Attendence<br>".html_safe, attend_event_path(@event) : link_to "Attend<br>".html_safe, attend_event_path(@event) %>
 	<% if current_user.id == @event.user_id %>
 		<%= link_to "Edit Event", edit_event_path(@event) %> |
 		<%= link_to "Remove", event_path(@event), :method => :delete %>
