--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,3 @@
-
-<%= image_tag current_user.avatar.url %>
-
 <p style="margin-left: 20px; margin-top: 20px;position:relative; ">
 	<%= @event.attending_users.include?(current_user) ? link_to("Cancel Attendence<br>".html_safe, attend_event_path(@event)) : link_to("Attend<br>".html_safe, attend_event_path(@event)) %>
 	<% if current_user.id == @event.user_id %>
@@ -14,3 +11,19 @@ Host: <%= link_to @event.user.name, profile_path(@event.user.profile) %><br>
 Description: <%= @event.body %><br>
 Entry Fee: <%= @event.entry_fee %>$<br>
 </p>
+<br>
+<% unless @event.attending_users.empty? %>
+	Currently Attending: <br>
+		<% @event.attending_users.each do |user| %>
+		<%= link_to user.profile.fname + ' ' + user.profile.lname, user_path(user) %><br><br>
+	<% end %>
+<% end %>
+
+<% unless @event.comments.empty? %>
+<% @event.comments.order(:created_at).each do |comment| %>
+<%= comment.user == current_user ? link_to("Delete Comment<br>".html_safe, event_comment_path(@event, comment), :method => :delete) : '' %>
+<b><%= comment.title %></b><br>
+<p><%= comment.body %></p>
+<% end %>
+<% end %>
+<%= render :partial => 'shared/comment_form' %>
