--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -91,6 +91,6 @@ form select {
 	text-shadow: 1px 1px black;
 	margin-top: 50px;
   border: 0px;
-  background: transparent;
+  background: grey;
 }
 
