--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -38,5 +38,6 @@ Description: <%= @event.body %><br>
 </div>
 <br>
 <hr>
-
+<div style="clear:both">
 <%= render :partial => 'shared/comment_form' %>
+</div>
