--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <center>Fraternity Brothers Near You</center>
+  <center><h2>Fraternity Brothers Near You</h2></center>
 </div>
 
 <div id='map_div'>
