--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -95,5 +95,6 @@ form select {
   background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
+	box-shadow: 0px 0px 30px 2px #666;
 }
 
